fixes footer bug on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -538,4 +538,10 @@ footer {
   .social-icons {
     position: relative;
   }
+
+  .footer-email {
+    font-size: 18px;
+    position: relative;
+    top: 5px;
+  }
 }
